# hardware_functions

./: README.md
mavros_moveto/: CMakeLists.txt  README.md  package.xml
mavros_moveto/action/: MoveTo.action
mavros_moveto/launch/: mavros_moveto.launch
mavros_moveto/param/: mavros_moveto_params.yaml
mavros_moveto/src/: moveto_action.cpp
mavros_moveto_target/: CMakeLists.txt  README.md  package.xml
mavros_moveto_target/action/: MoveToTarget.action
mavros_moveto_target/launch/: mavros_moveto_target.launch
mavros_moveto_target/param/: mavros_moveto_target_params.yaml
mavros_moveto_target/src/: moveto_target_action.cpp
mission_aborter/: CMakeLists.txt  package.xml
mission_aborter/launch/: mission_aborter.launch
mission_aborter/src/: mission_aborter.cpp
moveto/: CMakeLists.txt  README.md  package.xml
moveto/include/lib/: action_server.h
moveto/launch/: moveto.launch
moveto/param/: moveto.yaml
moveto/src/: moveto.cpp
moveto/src/lib/: action_server.cpp
return/: CMakeLists.txt  README.md  package.xml
return/include/: return_action.h
return/include/lib/: return.h
return/launch/: return.launch
return/param/: return.yaml
return/src/: return_action.cpp
return/src/lib/: return.cpp
uav_mavros_land/: CMakeLists.txt  README.md  package.xml
uav_mavros_land/launch/: mavros_land.launch
uav_mavros_land/param/: mavros_land_params.yaml
uav_mavros_land/src/: land_service.cpp
uav_mavros_takeoff/: CMakeLists.txt  README.md  package.xml
uav_mavros_takeoff/action/: TakeOff.action
uav_mavros_takeoff/include/: takeoff_action.h  takeoff_service.h
uav_mavros_takeoff/include/lib/: takeoff.h
uav_mavros_takeoff/launch/: mavros_takeoff.launch  uav_mavros_takeoff.launch
uav_mavros_takeoff/param/: mavros_takeoff_params.yaml  uav_mavros_takeoff.yaml
uav_mavros_takeoff/src/: takeoff_action.cpp  takeoff_service.cpp
uav_mavros_takeoff/src/lib/: takeoff.cpp
uav_mavros_takeoff/srv/: TakeOff.srv
ugv_elevator/: CMakeLists.txt  package.xml
ugv_elevator/scripts/: stage_elevator_bridge.py
ugv_picknplace/: CMakeLists.txt  package.xml
ugv_picknplace/cfg/: picknplace.cfg
ugv_picknplace/config/: picknplace.yaml
ugv_picknplace/include/lib/: action_server.h
ugv_picknplace/launch/: ugv_picknplace.launch
ugv_picknplace/scripts/: change_place_poses_bridge.py  pick_and_place.py
ugv_picknplace/src/: ugv_picknplace.cpp
ugv_picknplace/src/lib/: action_server.cpp
