<?xml version="1.0"?>
<package format="2">
  <name>mission_aborter</name>
  <version>0.0.1</version>
  <description>Mission aborter package</description>
  <license>BSD</license>
  <maintainer email="coriasco@ismb.it">Luigi Coriasco</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>
  <depend>swarmros</depend>
</package>
