<?xml version="1.0"?>
<package format="2">
	<name>uav_mavros_takeoff</name>
	<version>0.0.2</version>
	<description>A package that provides FCU firmware independent take off functionality based on MAVROS.</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="prato@ismb.it">Gianluca Prato</maintainer>
	<maintainer email="sende@lakeside-labs.com">Micha Sende</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<license>BSD</license>

	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/mavros_pos_controller</url> -->

	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>mavros</build_depend>
	<build_depend>message_generation</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>message_runtime</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>mavros</exec_depend>
	<exec_depend>message_runtime</exec_depend>

    <depend>mavros_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>cpswarm_msgs</depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
